using System.Collections;
using UnityEngine;

public class EnemyDichHach : MonoBehaviour
{
    [Header("Stats")]
    public float moveSpeed = 2f;
    public float attackRange = 1.5f;
    public float attackCooldown = 1.5f;
    public float detectRange = 6f;
    public float attackDamage = 15f;

    [Header("Health")]
    [Tooltip("S√°t th∆∞∆°ng Player g√¢y ra trong 1 c√∫ ƒë·∫•m. (N√™n l√† 2f)")]
    [SerializeField] private float playerPunchDamage = 2f;
    [Tooltip("S·ªë l·∫ßn Player ph·∫£i ƒë·∫•m ƒë·ªÉ Enemy ch·∫øt. (C·∫ßn l√† 5)")]
    [SerializeField] private int requiredPunchesToKill = 5;
    private float maxHealth;
    private float currentHealth;

    [Header("Animation Timings")]
    public float attackAnimationDuration = 1.0f;
    public float damageFrameTime = 0.3f;

    [Header("References")]
    public LayerMask playerLayer;

    private Transform player;
    private Animator animator;
    private Rigidbody2D rb;

    private bool isDead = false;
    private bool isAttacking = false;
    private bool isFacingRight = true;
    private float lastAttackTime = 0f;

    void Start()
    {
        animator = GetComponent<Animator>();
        rb = GetComponent<Rigidbody2D>();
        player = GameObject.FindGameObjectWithTag("Player")?.transform;

        lastAttackTime = Time.time;

        // KH·ªûI T·∫†O M√ÅU: M√°u = 5 * 2 = 10f
        maxHealth = requiredPunchesToKill * playerPunchDamage;
        currentHealth = maxHealth;

        if (player == null)
        {
            Debug.LogWarning("‚ö†Ô∏è Kh√¥ng t√¨m th·∫•y Player! H√£y set Tag = 'Player' cho player GameObject");
        }

        Debug.Log($"‚úÖ Enemy {gameObject.name} ƒë√£ kh·ªüi t·∫°o! HP: {currentHealth}/{maxHealth}");
    }

    void Update()
    {
        if (isDead || player == null) return;
        
        if (isAttacking)
        {
            rb.linearVelocity = Vector2.zero;
            return;
        }

        float distance = Vector2.Distance(transform.position, player.position);

        // === ATTACK RANGE ===
        if (distance <= attackRange)
        {
            rb.linearVelocity = Vector2.zero;
            animator.SetBool("isWalking", false);
            FlipTowardsPlayer();

            if (Time.time - lastAttackTime >= attackCooldown)
            {
                StartCoroutine(Attack());
            }
        }
        // === DETECT RANGE (CHASE) ===
        else if (distance <= detectRange)
        {
            MoveTowardsPlayer();
        }
        // === OUT OF RANGE ===
        else
        {
            animator.SetBool("isWalking", false);
            rb.linearVelocity = Vector2.zero;
        }
    }

    // ============================================
    // MOVE TOWARDS PLAYER - Di chuy·ªÉn v·ªÅ ph√≠a player
    // ============================================
    private void MoveTowardsPlayer()
    {
        animator.SetBool("isWalking", true);

        Vector2 direction = (player.position - transform.position).normalized;
        rb.linearVelocity = new Vector2(direction.x * moveSpeed, rb.linearVelocity.y);

        if (direction.x > 0 && !isFacingRight) Flip();
        else if (direction.x < 0 && isFacingRight) Flip();
    }

    // ============================================
    // FLIP TOWARDS PLAYER - Quay v·ªÅ ph√≠a player
    // ============================================
    private void FlipTowardsPlayer()
    {
        float directionX = player.position.x - transform.position.x;
        if (directionX > 0 && !isFacingRight) Flip();
        else if (directionX < 0 && isFacingRight) Flip();
    }

    // ============================================
    // ATTACK - T·∫•n c√¥ng player
    // ============================================
    private IEnumerator Attack()
    {
        isAttacking = true;
        animator.SetTrigger("isAttacking");
        rb.linearVelocity = Vector2.zero;

        yield return new WaitForSeconds(attackAnimationDuration);

        isAttacking = false;
        lastAttackTime = Time.time;
    }

    // ============================================
    // APPLY DAMAGE TO PLAYER - G√¢y damage (g·ªçi t·ª´ Animation Event)
    // ============================================
    public void ApplyDamageToPlayer()
    {
        if (player == null || isDead || !isAttacking) return;

        float distance = Vector2.Distance(transform.position, player.position);
        if (distance > attackRange) return;

        // Check player c√≥ ·ªü ph√≠a tr∆∞·ªõc kh√¥ng
        float directionToPlayer = player.position.x - transform.position.x;
        bool isPlayerInFront = (directionToPlayer > 0 && isFacingRight) ||
                               (directionToPlayer < 0 && !isFacingRight);

        if (isPlayerInFront)
        {
            var playerController = player.GetComponent<PlayerController>();
            if (playerController != null)
            {
                playerController.TakeDamage(attackDamage);
                Debug.Log($"‚öîÔ∏è {gameObject.name} t·∫•n c√¥ng Player! Damage: {attackDamage}");
            }
        }
    }

    // ============================================
    // TAKE DAMAGE - Nh·∫≠n s√°t th∆∞∆°ng
    // ============================================
    public void TakeDamage(float dmg)
    {
        if (isDead) return;

        isAttacking = false;
        if (rb != null) rb.linearVelocity = Vector2.zero;

        currentHealth -= dmg;
        Debug.Log($"üí• {gameObject.name} b·ªã nh·∫≠n {dmg} s√°t th∆∞∆°ng. M√°u c√≤n: {currentHealth}/{maxHealth}");

        if (currentHealth <= 0)
        {
            Die();
        }
        else
        {
            animator.SetTrigger("isHurt");
        }
    }

    // ============================================
    // DIE - Ch·∫øt
    // ============================================
    public void Die()
    {
        if (isDead) return;
        isDead = true;

        // 1. K√≠ch ho·∫°t animation ch·∫øt
        animator.SetTrigger("isDeath");

        // 2. D·ª´ng v·∫≠t l√Ω ngay l·∫≠p t·ª©c
        if (rb != null)
        {
            rb.linearVelocity = Vector2.zero;
            // QUAN TR·ªåNG: T·∫Øt Simulation ƒë·ªÉ v√¥ hi·ªáu h√≥a tr·ªçng l·ª±c
            rb.simulated = false;
        }

        // 3. T·∫Øt Collider v√† script
        Collider2D col = GetComponent<Collider2D>();
        if (col != null)
        {
            col.enabled = false;
        }

        Debug.Log($"üíÄ {gameObject.name} ƒë√£ ch·∫øt!");

        // 4. H·ªßy ƒë·ªëi t∆∞·ª£ng sau 2 gi√¢y (kh·ªõp v·ªõi animation)
        Destroy(gameObject, 2f);

        // 5. T·∫Øt script (ƒë·∫∑t cu·ªëi c√πng)
        this.enabled = false;
    }

    // ============================================
    // FLIP - L·∫≠t sprite
    // ============================================
    private void Flip()
    {
        isFacingRight = !isFacingRight;
        Vector3 scale = transform.localScale;
        scale.x *= -1;
        transform.localScale = scale;
    }

    // ============================================
    // GIZMOS - V·∫Ω ph·∫°m vi
    // ============================================
    private void OnDrawGizmosSelected()
    {
        Gizmos.color = Color.red;
        Gizmos.DrawWireSphere(transform.position, attackRange);
        Gizmos.color = Color.yellow;
        Gizmos.DrawWireSphere(transform.position, detectRange);
    }
}