using UnityEngine;
using System.Collections;


public class EnemyThuongHan : MonoBehaviour
{
    // ... (C√°c bi·∫øn Stats, Health, Animation Timings gi·ªØ nguy√™n) ...
    [Header("Stats")]
    public float moveSpeed = 2f;
    public float attackRange = 1.5f;
    public float attackCooldown = 1.5f;
    public float detectRange = 6f;
    public float attackDamage = 10f;

    // ‚öîÔ∏è HEALTH & S√ÅT TH∆Ø∆†NG T·ª™ PLAYER
    [Header("Health")]
    [Tooltip("S√°t th∆∞∆°ng Player g√¢y ra trong 1 c√∫ ƒë·∫•m. (N√™n l√† 2f)")]
    [SerializeField] private float playerPunchDamage = 2f;
    [Tooltip("S·ªë l·∫ßn Player ph·∫£i ƒë·∫•m ƒë·ªÉ Enemy ch·∫øt. (C·∫ßn l√† 2)")]
    [SerializeField] private int requiredPunchesToKill = 2; // Y√™u c·∫ßu 2 ƒë·∫•m
    private float maxHealth;
    private float currentHealth;
    // ---------------------------------------------

    [Header("Animation Timings")]
    public float attackAnimationDuration = 1.0f;
    public float damageFrameTime = 0.3f;

    [Header("References")]
    public LayerMask playerLayer;

    private Transform player;
    private Animator animator;
    private Rigidbody2D rb;

    private bool isDead = false;
    private bool isAttacking = false;
    private bool isFacingRight = true;
    private float lastAttackTime = 0f;

    void Start()
    {
        animator = GetComponent<Animator>();
        rb = GetComponent<Rigidbody2D>();
        player = GameObject.FindGameObjectWithTag("Player")?.transform;

        lastAttackTime = Time.time;

        // üî™ KH·ªûI T·∫†O M√ÅU: M√°u = 2 * 2 = 4f
        maxHealth = requiredPunchesToKill * playerPunchDamage;
        currentHealth = maxHealth;
    }

    void Update()
    {
        if (isDead || player == null) return;
        if (isAttacking)
        {
            rb.linearVelocity = Vector2.zero;
            return;
        }

        float distance = Vector2.Distance(transform.position, player.position);

        if (distance <= attackRange)
        {
            rb.linearVelocity = Vector2.zero;
            animator.SetBool("isWalking", false);
            FlipTowardsPlayer();

            if (Time.time - lastAttackTime >= attackCooldown)
            {
                StartCoroutine(Attack());
            }
        }
        else if (distance <= detectRange)
        {
            MoveTowardsPlayer();
        }
        else
        {
            animator.SetBool("isWalking", false);
        }
    }

    private void MoveTowardsPlayer()
    {
        animator.SetBool("isWalking", true);

        Vector2 direction = (player.position - transform.position).normalized;
        rb.linearVelocity = new Vector2(direction.x * moveSpeed, rb.linearVelocity.y);

        if (direction.x > 0 && !isFacingRight) Flip();
        else if (direction.x < 0 && isFacingRight) Flip();
    }

    private void FlipTowardsPlayer()
    {
        float directionX = player.position.x - transform.position.x;
        if (directionX > 0 && !isFacingRight) Flip();
        else if (directionX < 0 && isFacingRight) Flip();
    }

    private IEnumerator Attack()
    {
        isAttacking = true;
        animator.SetTrigger("isAttacking");
        rb.linearVelocity = Vector2.zero;

        yield return new WaitForSeconds(attackAnimationDuration);

        isAttacking = false;
        lastAttackTime = Time.time;
    }

    public void ApplyDamageToPlayer()
    {
        if (player == null || isDead || !isAttacking) return;

        float distance = Vector2.Distance(transform.position, player.position);
        if (distance > attackRange) return;

        float directionToPlayer = player.position.x - transform.position.x;
        bool isPlayerInFront = (directionToPlayer > 0 && isFacingRight) ||
                               (directionToPlayer < 0 && !isFacingRight);

        if (isPlayerInFront)
        {
            var playerController = player.GetComponent<PlayerController>();
            if (playerController != null)
            {
                playerController.TakeDamage(attackDamage);
            }
        }
    }

    public void TakeDamage(float dmg)
    {
        if (isDead) return;

        isAttacking = false;
        if (rb != null) rb.linearVelocity = Vector2.zero;

        currentHealth -= dmg;
        Debug.Log(gameObject.name + " b·ªã nh·∫≠n " + dmg + " s√°t th∆∞∆°ng. M√°u c√≤n: " + currentHealth);

        if (currentHealth <= 0)
        {
            Die();
        }
        else
        {
            animator.SetTrigger("isHurt");
        }
    }

    public void Die()
    {
        if (isDead) return;
        isDead = true;

        // 1. K√≠ch ho·∫°t ho·∫°t ·∫£nh
        animator.SetTrigger("isDeath");

        // 2. D·ª´ng v·∫≠t l√Ω ngay l·∫≠p t·ª©c!
        if (rb != null)
        {
            rb.linearVelocity = Vector2.zero;
            // üîë QUAN TR·ªåNG: T·∫Øt Simulation ƒë·ªÉ v√¥ hi·ªáu h√≥a tr·ªçng l·ª±c!
            rb.simulated = false;
        }

        // 3. T·∫Øt Collider v√† script
        GetComponent<Collider2D>().enabled = false;
        this.enabled = false;

        // 4. üöÄ ƒê√É S·ª¨A: TƒÉng th·ªùi gian ch·ªù h·ªßy ƒë·ªÉ kh·ªõp v·ªõi ho·∫°t ·∫£nh (v√≠ d·ª• 2 gi√¢y)
        // N·∫øu ho·∫°t ·∫£nh ch·∫øt c·ªßa b·∫°n d√†i h∆°n 2 gi√¢y, b·∫°n c·∫ßn tƒÉng gi√° tr·ªã n√†y.
        Destroy(gameObject, 2f);
    }

    private void Flip()
    {
        isFacingRight = !isFacingRight;
        Vector3 scale = transform.localScale;
        scale.x *= -1;
        transform.localScale = scale;
    }

    private void OnDrawGizmosSelected()
    {
        Gizmos.color = Color.red;
        Gizmos.DrawWireSphere(transform.position, attackRange);
        Gizmos.color = Color.yellow;
        Gizmos.DrawWireSphere(transform.position, detectRange);
    }
}
